Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34416

Crash on Android when opening menu

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.2.0 RC1
    • 5.1.1
    • QPA
    • None
    • Qt 5.1.1
      Build environment is Ubuntu 13.10 with android sdk build tools 18.1.1 and ndk r9.
      Target system is Acer Iconia Tab A701 running Android 4.1.1, kernel version 3.1.10+
    • Android
    • b280182053a8ccd912eb165b59928e88a6d62c92

    Description

      My application crashes on android when IU try to open the main menu.
      It works correct on linux and windows.

      Debugging doesn't work correctly. QtCreator insists that the executable has no debug symbols despite the fact that it is a debug build. But that is the output:

      W/dalvikvm( 8750): JNI WARNING: JNI method called with exception pending
      W/dalvikvm( 8750): in Lorg/qtproject/qt5/android/QtNative;.onPrepareOptionsMenu:(Landroid/view/Menu;)Z (GetIntField)
      W/dalvikvm( 8750): Pending exception is:
      I/dalvikvm( 8750): java.lang.IllegalArgumentException: width and height must be > 0
      I/dalvikvm( 8750): at android.graphics.Bitmap.createBitmap(Bitmap.java:638)
      I/dalvikvm( 8750): at android.graphics.Bitmap.createBitmap(Bitmap.java:620)
      I/dalvikvm( 8750): at org.qtproject.qt5.android.QtNative.onPrepareOptionsMenu(Native Method)
      I/dalvikvm( 8750): at org.qtproject.qt5.android.QtActivityDelegate.onPrepareOptionsMenu(QtActivityDelegate.java:745)
      I/dalvikvm( 8750): at java.lang.reflect.Method.invokeNative(Native Method)
      I/dalvikvm( 8750): at java.lang.reflect.Method.invoke(Method.java:511)
      I/dalvikvm( 8750): at org.qtproject.qt5.android.bindings.QtApplication.invokeDelegateMethod(QtApplication.java:143)
      I/dalvikvm( 8750): at org.qtproject.qt5.android.bindings.QtApplication.invokeDelegate(QtApplication.java:132)
      I/dalvikvm( 8750): at org.qtproject.qt5.android.bindings.QtActivity.onPrepareOptionsMenu(QtActivity.java:991)
      I/dalvikvm( 8750): at android.app.Activity.onPreparePanel(Activity.java:2494)
      I/dalvikvm( 8750): at org.qtproject.qt5.android.bindings.QtActivity.onPreparePanel(QtActivity.java:1010)
      I/dalvikvm( 8750): at com.android.internal.policy.impl.PhoneWindow.preparePanel(PhoneWindow.java:421)
      I/dalvikvm( 8750): at com.android.internal.policy.impl.PhoneWindow.onKeyDownPanel(PhoneWindow.java:767)
      I/dalvikvm( 8750): at com.android.internal.policy.impl.PhoneWindow.onKeyDown(PhoneWindow.java:1432)
      I/dalvikvm( 8750): at com.android.internal.policy.impl.PhoneWindow$DecorView.dispatchKeyEvent(PhoneWindow.java:1826)
      I/dalvikvm( 8750): at android.view.ViewRootImpl.deliverKeyEventPostIme(ViewRootImpl.java:3575)
      I/dalvikvm( 8750): at android.view.ViewRootImpl.handleImeFinishedEvent(ViewRootImpl.java:3545)
      I/dalvikvm( 8750): at android.view.ViewRootImpl$ViewRootHandler.handleMessage(ViewRootImpl.java:2795)
      I/dalvikvm( 8750): at android.os.Handler.dispatchMessage(Handler.java:99)
      I/dalvikvm( 8750): at android.os.Looper.loop(Looper.java:137)
      I/dalvikvm( 8750): at android.app.ActivityThread.main(ActivityThread.java:4745)
      I/dalvikvm( 8750): at java.lang.reflect.Method.invokeNative(Native Method)
      I/dalvikvm( 8750): at java.lang.reflect.Method.invoke(Method.java:511)
      I/dalvikvm( 8750): at com.android.internal.os.ZygoteInit$MethodAndArgsCaller.run(ZygoteInit.java:786)
      I/dalvikvm( 8750): at com.android.internal.os.ZygoteInit.main(ZygoteInit.java:553)
      I/dalvikvm( 8750): at dalvik.system.NativeStart.main(Native Method)
      I/dalvikvm( 8750): "main" prio=5 tid=1 NATIVE
      I/dalvikvm( 8750): | group="main" sCount=0 dsCount=0 obj=0x40cb3508 self=0x40c4eb48
      I/dalvikvm( 8750): | sysTid=8750 nice=0 sched=0/0 cgrp=apps handle=1075922480
      I/dalvikvm( 8750): | schedstat=( 2280013000 816616000 1331 ) utm=129 stm=99 core=0
      I/dalvikvm( 8750): #00 pc 00001260 /system/lib/libcorkscrew.so (unwind_backtrace_thread+27)
      I/dalvikvm( 8750): #01 pc 0005f938 /system/lib/libdvm.so (dvmDumpNativeStack(DebugOutputTarget const*, int)+35)
      I/dalvikvm( 8750): #02 pc 000537e0 /system/lib/libdvm.so (dvmDumpThreadEx(DebugOutputTarget const*, Thread*, bool)+303)
      I/dalvikvm( 8750): #03 pc 0005387a /system/lib/libdvm.so (dvmDumpThread(Thread*, bool)+25)
      I/dalvikvm( 8750): #04 pc 00038dc2 /system/lib/libdvm.so
      I/dalvikvm( 8750): #05 pc 0003e948 /system/lib/libdvm.so
      I/dalvikvm( 8750): #06 pc 00057bfe /system/lib/libandroid_runtime.so
      I/dalvikvm( 8750): #07 pc 0000057a /system/lib/libjnigraphics.so (AndroidBitmap_getInfo+21)
      I/dalvikvm( 8750): #08 pc 0000fe1c /data/data/org.qtproject.example.vmsbTool3/plugins/platforms/android/libqtforandroid.so
      I/dalvikvm( 8750): #09 pc 0001163e /data/data/org.qtproject.example.vmsbTool3/plugins/platforms/android/libqtforandroid.so
      I/dalvikvm( 8750): #10 pc 00011bac /data/data/org.qtproject.example.vmsbTool3/plugins/platforms/android/libqtforandroid.so
      I/dalvikvm( 8750): #11 pc 00011d32 /data/data/org.qtproject.example.vmsbTool3/plugins/platforms/android/libqtforandroid.so
      I/dalvikvm( 8750): #12 pc 0001de30 /system/lib/libdvm.so (dvmPlatformInvoke+112)
      I/dalvikvm( 8750): #13 pc 0004d082 /system/lib/libdvm.so (dvmCallJNIMethod(unsigned int const*, JValue*, Method const*, Thread*)+393)
      I/dalvikvm( 8750): #14 pc 00027260 /system/lib/libdvm.so
      I/dalvikvm( 8750): #15 pc 0002bb6c /system/lib/libdvm.so (dvmInterpret(Thread*, Method const*, JValue*)+180)
      I/dalvikvm( 8750): #16 pc 0005fb2a /system/lib/libdvm.so (dvmInvokeMethod(Object*, Method const*, ArrayObject*, ArrayObject*, ClassObject*, bool)+373)
      I/dalvikvm( 8750): #17 pc 00067080 /system/lib/libdvm.so
      I/dalvikvm( 8750): #18 pc 00027260 /system/lib/libdvm.so
      I/dalvikvm( 8750): #19 pc 0002bb6c /system/lib/libdvm.so (dvmInterpret(Thread*, Method const*, JValue*)+180)
      I/dalvikvm( 8750): #20 pc 0005fb2a /system/lib/libdvm.so (dvmInvokeMethod(Object*, Method const*, ArrayObject*, ArrayObject*, ClassObject*, bool)+373)
      I/dalvikvm( 8750): #21 pc 00067080 /system/lib/libdvm.so
      I/dalvikvm( 8750): #22 pc 00027260 /system/lib/libdvm.so
      I/dalvikvm( 8750): #23 pc 0002bb6c /system/lib/libdvm.so (dvmInterpret(Thread*, Method const*, JValue*)+180)
      I/dalvikvm( 8750): #24 pc 0005f864 /system/lib/libdvm.so (dvmCallMethodV(Thread*, Method const*, Object*, bool, JValue*, std::__va_list)+271)
      I/dalvikvm( 8750): #25 pc 00049672 /system/lib/libdvm.so
      I/dalvikvm( 8750): #26 pc 000489fa /system/lib/libandroid_runtime.so
      I/dalvikvm( 8750): #27 pc 000494de /system/lib/libandroid_runtime.so (android::AndroidRuntime::start(char const*, char const*)+389)
      I/dalvikvm( 8750): #28 pc 00000e70 /system/bin/app_process
      I/dalvikvm( 8750): #29 pc 00017144 /system/lib/libc.so (__libc_init+35)
      I/dalvikvm( 8750): at org.qtproject.qt5.android.QtNative.onPrepareOptionsMenu(Native Method)
      I/dalvikvm( 8750): at org.qtproject.qt5.android.QtActivityDelegate.onPrepareOptionsMenu(QtActivityDelegate.java:745)
      I/dalvikvm( 8750): at java.lang.reflect.Method.invokeNative(Native Method)
      I/dalvikvm( 8750): at java.lang.reflect.Method.invoke(Method.java:511)
      I/dalvikvm( 8750): at org.qtproject.qt5.android.bindings.QtApplication.invokeDelegateMethod(QtApplication.java:143)
      I/dalvikvm( 8750): at org.qtproject.qt5.android.bindings.QtApplication.invokeDelegate(QtApplication.java:132)
      I/dalvikvm( 8750): at org.qtproject.qt5.android.bindings.QtActivity.onPrepareOptionsMenu(QtActivity.java:991)
      I/dalvikvm( 8750): at android.app.Activity.onPreparePanel(Activity.java:2494)
      I/dalvikvm( 8750): at org.qtproject.qt5.android.bindings.QtActivity.onPreparePanel(QtActivity.java:1010)
      I/dalvikvm( 8750): at com.android.internal.policy.impl.PhoneWindow.preparePanel(PhoneWindow.java:421)
      I/dalvikvm( 8750): at com.android.internal.policy.impl.PhoneWindow.onKeyDownPanel(PhoneWindow.j
      I/dalvikvm( 8750): #00 pc 00001260 /system/lib/libcorkscrew.so (unwind_backtrace_thread+27)
      I/dalvikvm( 8750): #01 pc 0005f938 /system/lib/libdvm.so (dvmDumpNativeStack(DebugOutputTarget const*, int)+35)
      I/dalvikvm( 8750): #02 pc 000537e0 /system/lib/libdvm.so (dvmDumpThreadEx(DebugOutputTarget const*, Thread*, bool)+303)
      I/dalvikvm( 8750): #03 pc 0005387a /system/lib/libdvm.so (dvmDumpThread(Thread*, bool)+25)
      I/dalvikvm( 8750): #04 pc 00038dc2 /system/lib/libdvm.so
      I/dalvikvm( 8750): #05 pc 0003e948 /system/lib/libdvm.so
      I/dalvikvm( 8750): #06 pc 00057bfe /system/lib/libandroid_runtime.so
      I/dalvikvm( 8750): #07 pc 0000057a /system/lib/libjnigraphics.so (AndroidBitmap_getInfo+21)
      I/dalvikvm( 8750): #08 pc 0000fe1c /data/data/org.qtproject.example.vmsbTool3/plugins/platforms/android/libqtforandroid.so
      I/dalvikvm( 8750): #09 pc 0001163e /data/data/org.qtproject.example.vmsbTool3/plugins/platforms/android/libqtforandroid.so
      I/dalvikvm( 8750): #10 pc 00011bac /data/data/org.qtproject.example.vmsbTool3/plugins/platforms/android/libqtforandroid.so
      I/dalvikvm( 8750): #11 pc 00011d32 /data/data/org.qtproject.example.vmsbTool3/plugins/platforms/android/libqtforandroid.so
      I/dalvikvm( 8750): #12 pc 0001de30 /system/lib/libdvm.so (dvmPlatformInvoke+112)
      I/dalvikvm( 8750): #13 pc 0004d082 /system/lib/libdvm.so (dvmCallJNIMethod(unsigned int const*, JValue*, Method const*, Thread*)+393)
      I/dalvikvm( 8750): #14 pc 00027260 /system/lib/libdvm.so
      I/dalvikvm( 8750): #15 pc 0002bb6c /system/lib/libdvm.so (dvmInterpret(Thread*, Method const*, JValue*)+180)
      I/dalvikvm( 8750): #16 pc 0005fb2a /system/lib/libdvm.so (dvmInvokeMethod(Object*, Method const*, ArrayObject*, ArrayObject*, ClassObject*, bool)+373)
      I/dalvikvm( 8750): #17 pc 00067080 /system/lib/libdvm.so
      I/dalvikvm( 8750): #18 pc 00027260 /system/lib/libdvm.so
      I/dalvikvm( 8750): #19 pc 0002bb6c /system/lib/libdvm.so (dvmInterpret(Thread*, Method const*, JValue*)+180)
      I/dalvikvm( 8750): #20 pc 0005fb2a /system/lib/libdvm.so (dvmInvokeMethod(Object*, Method const*, ArrayObject*, ArrayObject*, ClassObject*, bool)+373)
      I/dalvikvm( 8750): #21 pc 00067080 /system/lib/libdvm.so
      I/dalvikvm( 8750): #22 pc 00027260 /system/lib/libdvm.so
      I/dalvikvm( 8750): #23 pc 0002bb6c /system/lib/libdvm.so (dvmInterpret(Thread*, Method const*, JValue*)+180)
      I/dalvikvm( 8750): #24 pc 0005f864 /system/lib/libdvm.so (dvmCallMethodV(Thread*, Method const*, Object*, bool, JValue*, std::__va_list)+271)
      I/dalvikvm( 8750): #25 pc 00049672 /system/lib/libdvm.so
      I/dalvikvm( 8750): #26 pc 000489fa /system/lib/libandroid_runtime.so
      I/dalvikvm( 8750): #27 pc 000494de /system/lib/libandroid_runtime.so (android::AndroidRuntime::start(char const*, char const*)+389)
      I/dalvikvm( 8750): #28 pc 00000e70 /system/bin/app_process
      I/dalvikvm( 8750): #29 pc 00017144 /system/lib/libc.so (__libc_init+35)
      I/dalvikvm( 8750): at org.qtproject.qt5.android.QtNative.onPrepareOptionsMenu(Native Method)
      I/dalvikvm( 8750): at org.qtproject.qt5.android.QtActivityDelegate.onPrepareOptionsMenu(QtActivityDelegate.java:745)
      I/dalvikvm( 8750): at java.lang.reflect.Method.invokeNative(Native Method)
      I/dalvikvm( 8750): at java.lang.reflect.Method.invoke(Method.java:511)
      I/dalvikvm( 8750): at org.qtproject.qt5.android.bindings.QtApplication.invokeDelegateMethod(QtApplication.java:143)
      I/dalvikvm( 8750): at org.qtproject.qt5.android.bindings.QtApplication.invokeDelegate(QtApplication.java:132)
      I/dalvikvm( 8750): at org.qtproject.qt5.android.bindings.QtActivity.onPrepareOptionsMenu(QtActivity.java:991)
      I/dalvikvm( 8750): at android.app.Activity.onPreparePanel(Activity.java:2494)
      I/dalvikvm( 8750): at org.qtproject.qt5.android.bindings.QtActivity.onPreparePanel(QtActivity.java:1010)
      I/dalvikvm( 8750): at com.android.internal.policy.impl.PhoneWindow.preparePanel(PhoneWindow.java:421)
      I/dalvikvm( 8750): at com.android.internal.policy.impl.PhoneWindow.onKeyDownPanel(PhoneWindow.java:767)
      I/dalvikvm( 8750): at com.android.internal.policy.impl.PhoneWindow.onKeyDown(PhoneWindow.java:1432)
      I/dalvikvm( 8750): at com.android.internal.policy.impl.PhoneWindow$DecorView.dispatchKeyEvent(PhoneWindow.java:1826)
      I/dalvikvm( 8750): at android.view.ViewRootImpl.deliverKeyEventPostIme(ViewRootImpl.java:3575)
      I/dalvikvm( 8750): at android.view.ViewRootImpl.handleImeFinishedEvent(ViewRootImpl.java:3545)
      I/dalvikvm( 8750): at android.view.ViewRootImpl$ViewRootHandler.handleMessage(ViewRootImpl.java:2795)
      I/dalvikvm( 8750): at android.os.Handler.dispatchMessage(Handler.java:99)
      I/dalvikvm( 8750): at android.os.Looper.loop(Looper.java:137)
      I/dalvikvm( 8750): at android.app.ActivityThread.main(ActivityThread.java:4745)
      I/dalvikvm( 8750): at java.lang.reflect.Method.invokeNative(Native Method)
      I/dalvikvm( 8750): at java.lang.reflect.Method.invoke(Method.java:511)
      I/dalvikvm( 8750): at com.android.internal.os.ZygoteInit$MethodAndArgsCaller.run(ZygoteInit.java:786)
      I/dalvikvm( 8750): at com.android.internal.os.ZygoteInit.main(ZygoteInit.java:553)
      I/dalvikvm( 8750): at dalvik.system.NativeStart.main(Native Method)
      I/dalvikvm( 8750):
      E/dalvikvm( 8750): VM aborting

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            stromme Christian
            cyril4 Harald Prasser
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes