Android: Don't rely on QIcon::isNull() to validate icon data.

QIcon::isNull() only checks if it has a valid d pointer and not if it
actually contains any image data. The result is that the QImage create
from the icon would be invalid, and later cause an exception to be
thrown. To avoid this we should check the QImage as well.

Task-number: QTBUG-34416
Change-Id: I9dd0a2387d73bfc2c27ceb9df247ddc186dd659f
Reviewed-by: BogDan Vatra <bogdan@kde.org>

cregit: b280182053a8ccd912eb165b59928e88a6d62c92 https://github.com/qt/qtbase/commit/b280182053a8ccd912eb165b59928e88a6d62c92